-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 13.0.1
-
Windows 10 22H2, have both MSVC and MinGW kits installed
-
-
968051eb7 (master)
See attached project, which is based on https://doc.qt.io/qtcreator/creator-build-settings-cmake-presets.html#mingw-example - I simply changed the Qt version number and specified a Debug build.
{
"version": 1,
"configurePresets": [
{
"name": "mingw",
"displayName": "MinGW 11.2.0",
"generator": "MinGW Makefiles",
"binaryDir": "${sourceDir}/build-debug",
"cmakeExecutable": "C:/Qt/Tools/CMake_64/bin/cmake.exe",
"cacheVariables": {
"CMAKE_BUILD_TYPE": "Debug",
"CMAKE_PREFIX_PATH": "C:/Qt/6.5.5/mingw_64"
},
"environment": {
"PATH": "C:/Qt/Tools/mingw1120_64/bin;$penv{PATH}"
}
}
]
}
Compiling and running work fine, and the Clang code model can understand the project. However, Qt Creator tries to use CDB for debugging, and there seems to be no way to change it:

| For Gerrit Dashboard: QTCREATORBUG-30836 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 562759,3 | CMakePM: Presets: Add ability to register a Debugger via "vendor" field | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |